--- a/BW2/src/main/resources/application.properties
+++ b/BW2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.config.import=file:env.properties
+spring.config.import=classpath:env.properties
 spring.application.name=BW2
 # SERVER CONFIG
 server.port=5000
@@ -7,7 +7,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/BW2
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver=org.postgresql.Driver
-
 # HIBERNATE CONFIG
 spring.jpa.hibernate.ddl-auto=update
 jwt.secret=${JWT_SECRET}
